--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,5 +50,11 @@
             android:layout_alignParentBottom="true"
             android:id="@+id/bottom_navigation"
             app:menu="@menu/bottom_nav_menu"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="500dp"
+        android:layout_marginLeft="200dp"
+        android:id="@+id/accessTokenBtn"/>
 
 </RelativeLayout>
