--- a/app/src/main/res/layout/fragment_profile_.xml
+++ b/app/src/main/res/layout/fragment_profile_.xml
@@ -60,6 +60,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textStyle="bold"
+            android:layout_marginTop="30dp"
             android:id="@+id/logout_btn"
             android:text="Log out"/>
     </LinearLayout>
