--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,16 +20,16 @@
             android:layout_marginTop="10dp"
             android:layout_marginStart="10dp"
             android:textColor="@color/white"/>
+
         <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:src="@drawable/search"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="20dp"
             android:id="@+id/search_btn"
-            android:background="@color/my_primary"
+            android:layout_width="31dp"
+            android:layout_height="26dp"
             android:layout_alignParentEnd="true"
-            />
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="21dp"
+            android:background="@drawable/search_button"
+             />
 
     </RelativeLayout>
     <com.google.android.material.divider.MaterialDivider
@@ -50,11 +50,6 @@
             android:layout_alignParentBottom="true"
             android:id="@+id/bottom_navigation"
             app:menu="@menu/bottom_nav_menu"/>
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="500dp"
-        android:layout_marginLeft="200dp"
-        android:id="@+id/accessTokenBtn"/>
+
 
 </RelativeLayout>
